Wed Jun 17 07:44:27 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httputils.rb (parse_form_data): escape boundary of
	  multipart/form-data when embed in regexp.

Tue Jun 16 22:23:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_open), math.c (domain_check), object.c (boot_defclass):
	  constified.

Tue Jun 16 09:11:36 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_close): always call #close method.  [ruby-core:23853]

	* io.c (argf_skip): should close only when current_file is available.

Thu Jun 11 17:49:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (gfCheckVal): never used.

	* ext/bigdecimal/bigdecimal.c (VpInit): fixed format modifiers.

	* ext/bigdecimal/bigdecimal.c (VPrint): constified.

Thu Jun 11 15:05:00 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VpCtoV): big number should result
	  to infinite.  backported from 1.9.

	* ext/bigdecimal/bigdecimal.c (VpIsRoundMode): rounding mode
	  condition check updated.  backported from 1.9.

	* ext/bigdecimal/bigdecimal.c (VpPower): should handle NaN and
	  Inf.  backported from 1.9.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_DoDivmod): divmod should
	  raise ZeroDivisionError.  backported from 1.9.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_mode): should check
	  exception for VP_EXCEPTION_UNDERFLOW and VP_EXCEPTION_ZERODIVIDE.
	  backported from 1.9.

	* ext/bigdecimal/bigdecimal.c (VpException): ditto.

	* ext/bigdecimal/bigdecimal.h (VP_EXCEPTION_ZERODIVIDE): new error
	  code.  backported from 1.9.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div2, BigDecimal_round,
	  BigDecimal_truncate, BigDecimal_floor, BigDecimal_ceil): eagerly convert
	  bigdecimal to integer.  backported from 1.9.

	* ext/bigdecimal/bigdecimal.c (VpMult): free internal Real.
	  backported from 1.9.

Thu Jun 11 13:29:16 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
